<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/nuvemSuperior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="588dp"
        android:contentDescription="@string/nuvem_superior"
        android:src="@drawable/nuvem_superior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.654"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.225"
        tools:ignore="VisualLintBounds" />

    <ImageView
        android:id="@+id/nuvemInferior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="470dp"
        android:contentDescription="@string/nuvem_inferior"
        android:src="@drawable/nuvem_inferior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nuvemSuperior"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="VisualLintBounds" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/signout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/Sair"
        android:textColor="#673AB7"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="328dp"
        tools:layout_editor_absoluteY="-6dp" />

</androidx.constraintlayout.widget.ConstraintLayout>